# -

./: CMakeLists.txt  README.md
src/: Parser.h  ParserSet.h  a.out  autom.h  in.txt  main.cpp
test/: main_test.cpp  my_tests.cpp
